--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 <ul>
 {% for event in events %}
-<div class = "event-container"><li>{{event.name}}</li></div>
+<div class = "event-container">{{event.name}}</div>
 {% endfor %}
 </ul>
 </body>
