changed img file locations + login, signup pages functioning

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-                            <img src="img/event/event_1.png" alt="">
+                            <img src="static/img/event/event_1.png" alt="">
                         </div>
                         <h3>Meal Grabbing</h3>
                         <span>Appetizer</span>
@@ -125,7 +125,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-                            <img src="img/event/event_2.png" alt="">
+                            <img src="static/img/event/event_2.png" alt="">
                         </div>
                         <h3>Central Park Run</h3>
                         <span>Appetizer</span>
@@ -136,7 +136,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-                            <img src="img/event/event_3.png" alt="">
+                            <img src="static/img/event/event_3.png" alt="">
                         </div>
                         <h3>Aerospace Info Session</h3>
                         <span>Appetizer</span>
