--- a/templates/index.html
+++ b/templates/index.html
@@ -106,14 +106,10 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-<<<<<<< HEAD
                             <a href="/event">
                                 <img src="/static/img/event/event_1.png" alt="">
                             </a>
                             
-=======
-                            <img src="static/img/event/event_1.png" alt="">
->>>>>>> 7055bbf993b5d2958ed07b93b0b4846a3391f970
                         </div>
                         <h3>Meal Grabbing</h3>
                         <span>Appetizer</span>
@@ -125,11 +121,9 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-<<<<<<< HEAD
-                            <img src="/static/img/event/event_2.png" alt="">
-=======
-                            <img src="static/img/event/event_2.png" alt="">
->>>>>>> 7055bbf993b5d2958ed07b93b0b4846a3391f970
+                            <a href="/event">
+                                <img src="/static/img/event/event_2.png" alt="">
+                            </a>
                         </div>
                         <h3>Central Park Run</h3>
                         <span>Appetizer</span>
@@ -141,11 +135,9 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-<<<<<<< HEAD
-                            <img src="/static/img/event/event_3.jpg" alt="">
-=======
-                            <img src="static/img/event/event_3.png" alt="">
->>>>>>> 7055bbf993b5d2958ed07b93b0b4846a3391f970
+                            <a href="/event">
+                                <img src="/static/img/event/event_3.jpg" alt="">
+                            </a>
                         </div>
                         <h3>Aerospace Info Session</h3>
                         <span>Appetizer</span>
