index page roughly working

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,6 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="single_recepie text-center">
                         <div class="recepie_thumb">
-<<<<<<< HEAD
                           <a href="/event/{{event.eid}}">
                             <img src={{event.img}} alt="">
                           </a>
@@ -115,46 +114,7 @@
                         <h3>{{event.name}}</h3>
                         <span>{{event.location}}</span>
                         <p>{{event.days}} days and {{event.hours}} hours away</p>
-                        <a href="/event" class="line_btn">View Event Details</a>
-=======
-                            <a href="/event">
-                                <img src="/static/img/event/event_1.png" alt="">
-                            </a>
-                            
-                        </div>
-                        <h3>Meal Grabbing</h3>
-                        <span>Appetizer</span>
-                        <p>Time Needs: 30 Mins</p>
-                        <a href="#" class="line_btn">View Event Details</a>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <a href="/event">
-                                <img src="/static/img/event/event_2.png" alt="">
-                            </a>
-                        </div>
-                        <h3>Central Park Run</h3>
-                        <span>Appetizer</span>
-                        <p>Time Needs: 30 Mins</p>
-                        <a href="#" class="line_btn">View Event Details</a>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <a href="/event">
-                                <img src="/static/img/event/event_3.jpg" alt="">
-                            </a>
-                        </div>
-                        <h3>Aerospace Info Session</h3>
-                        <span>Appetizer</span>
-                        <p>Time Needs: 30 Mins</p>
-                        <a href="#" class="line_btn">View Event Details</a>
->>>>>>> ce84b71d4d48f0e53625315d824e9d146b8bfd56
+                        <a href="/event/{{event.eid}}" class="line_btn">View Event Details</a>
                     </div>
                 </div>
               {% endfor %}
