--- a/templates/allevent.html
+++ b/templates/allevent.html
@@ -33,96 +33,28 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-    <!-- header-start -->
-    <header>
-        <div class="header-area ">
-            <div id="sticky-header" class="main-header-area ">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-xl-3 col-lg-2">
-                            <div class="logo">
-                                <a href="index.html">
-                                    <img src="img/logo.png" alt="">
-                                </a>
+        <!-- event_area_start  -->
+        <div class="recepie_area">
+            <div class="container">
+                <div class="row">
+                  {% for event in events %}
+                    <div class="col-xl-4 col-lg-4 col-md-6">
+                        <div class="single_recepie text-center">
+                            <div class="recepie_thumb">
+                              <a href="/event/{{event.eid}}">
+                                <img src={{event.img}} alt="">
+                              </a>
                             </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-7">
-                            <div class="main-menu   d-none d-lg-block">
-                                <nav>
-                                    <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="about.html">about</a></li>
-                                        <!--<li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="recipes_details.html">Recipes Details</a></li>
-                                                <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li>-->
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                            <div class="search_icon">
-                                <a href="#">
-                                    <i class="ti-search"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
+                            <h3>{{event.name}}</h3>
+                            <span>{{event.location}}</span>
+                            <p>{{event.days}} days and {{event.hours}} hours away</p>
+                            <a href="/event/{{event.eid}}" class="line_btn">View Event Details</a>
                         </div>
                     </div>
-
+                  {% endfor %}
                 </div>
             </div>
         </div>
-    </header>
-    <!-- header-end -->
-
-    <!-- event_area_start  -->
-    <div class="recepie_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <img src="static/img/event/event_1.png" alt="">
-                        </div>
-                        <h3>event.name</h3>
-                        <span>event.time</span>
-                        <p>Time Needs: 30 Mins</p>
-                        <a href="#" class="line_btn">View Event Details</a>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <img src="static/img/event/event_2.png" alt="">
-                        </div>
-                        <h3>Central Park Run</h3>
-                        <span>Appetizer</span>
-                        <p>Time Needs: 30 Mins</p>
-                        <a href="#" class="line_btn">View Event Details</a>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-6">
-                    <div class="single_recepie text-center">
-                        <div class="recepie_thumb">
-                            <img src="static/img/event/event_3.png" alt="">
-                        </div>
-                        <h3>Aerospace Info Session</h3>
-                        <span>Appetizer</span>
-                        <p>Time Needs: 30 Mins</p>
-                        <a href="#" class="line_btn">View Event Details</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /event_area_start  -->
-
-
+        <!-- /event_area_end  -->
 </body>
-
 </html>
