--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </div>
-    <!-- /event_area_start  -->
+    <!-- /event_area_end  -->
 
 
     <!-- latest_trand     -->
@@ -131,7 +131,7 @@
                 <div class="col-xl-12">
                     <div class="trand_info text-center">
                         <h3>Discover latest trending events</h3>
-                        <a href="#" class="boxed-btn3">View all Events</a>
+                        <a href="/allevent" class="boxed-btn3">View all Events</a>
                     </div>
                 </div>
             </div>
