updated a bit of event page

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,9 @@
                                 <h3>
                                     {{headline.name}}
                                 </h3>
+                                <span>{{headline.location}}</span>
+                                <h4>{{headline.days}} days and {{headline.hours}} hours away</h4>
+                                <a href="/event/{{headline.eid}}" class="line_btn">View Event Details</a>
                         </div>
                     </div>
                 </div>
