--- a/templates/index.html
+++ b/templates/index.html
@@ -94,6 +94,12 @@
                                 <span>{{headline.location}}</span>
                                 <h4>{{headline.days}} days and {{headline.hours}} hours away</h4>
                                 <a href="/event/{{headline.eid}}" class="line_btn">View Event Details</a>
+                                <form method = "POST" action = "/rsvp-post/{{headline.eid}}">
+                                  <button class="line_btn">RSVP</button>
+                                </form>
+                                <form method = "POST" action = "/reject-post/{{headline.eid}}">
+                                  <button class="line_btn">Reject</button>
+                                </form>
                         </div>
                     </div>
                 </div>
