--- a/templates/survey.html
+++ b/templates/survey.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <form method="POST", action = "/survey-add">
-    <p>Name: <input type="text" name="name"></p>
+    <p>First name: <input type="text" name="first-name"></p>
+    <p>Last name: <input type="text" name="last-name"></p>
     <p>UNI: <input type="text" name="uni"></p>
     <p>Major: <input type="text" name="major"></p>
     <p>Year: <select name="year">
@@ -17,6 +18,8 @@
     <option>junior</option>
     <option>senior</option>
     </select></p>
+    <p>Bio: <input type="text" name="bio"></p>
+    <input type="hidden" name="uid" value="{{uid}}" />
     <div class="slidecontainer" id="slide_container_f">
     <p>Social:<span id="demo"></span></p>
     <input type="range" min=1 max=100 class="slider"
