--- a/templates/index.html
+++ b/templates/index.html
@@ -64,9 +64,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="search_icon">
-                                <a href="#">
-                                    <i class="ti-search"></i>
-                                </a>
+                                <a href='/profile/{{user.uid}}'><img style ="width:75px;height:75px" src={{user.image}} /></a>
                             </div>
                         </div>
                         <div class="col-12">
