--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,9 @@
                             <div class="main-menu   d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="index.html">home</a></li>
-                                        <li><a href="about.html">about</a></li>
+                                      <form method = "GET" action = "/create-event">
+                                        <button class="line_btn">Post Your Own!</button>
+                                      </form>
                                         <!--<li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="recipes_details.html">Recipes Details</a></li>
